# Layered-Memory-Architecture

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  data.txt  docker-compose.yml  embeddings.py  index.html  main.py  policy.py  pyproject.toml  query_db.py  requirements.txt  start_server.bat  start_server.sh  vector_store.py
backend/: CHATGPT_GAP_ANALYSIS.md  DOCS.md  behavior_engine.py  cache.py  chunker.py  cli.py  context_manager.py  conversation_state.py  embeddings.py  evaluation.py  hooks.py  hybrid_search.py  main.py  policy.py  query_db.py  reranker.py  research_memory.py  settings.py  telemetry.py  thread_summarizer.py  topic_threading.py  vector_store.py  worker.py
backend/llm/: __init__.py  classifier.py  client.py  generators.py  profile_detector.py  prompt_orchestrator.py  prompts.py
backend/tests/: conftest.py  test_behavior_engine.py  test_chunker.py  test_classifier.py  test_cli.py  test_conversation_state.py  test_evaluation.py  test_hybrid_search.py  test_insights_search.py  test_policy.py  test_prompt_orchestrator.py  test_reranker.py  test_research_memory.py  test_settings.py  test_thread_summarizer.py  test_topic_threading.py
experiments/: README.md  compare.py  eval_retrieval.py  eval_retrieval_fast.py  query_corpus.py  quick_verify.py  run_compare.py  run_quick.py  runner.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
knowledge/: 01_architecture.md  02_configuration.md  03_database.md  04_api.md  05_llm_package.md  06_policy_and_hooks.md  07_frontend.md  08_getting_started.md  IMPLEMENTATION.md
llm/: classifier.py  client.py  generators.py  profile_detector.py  prompt_orchestrator.py  prompts.py
tests/: test_context_manager.py  test_policy.py
(+37 files in other folders)
