[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rag-chat"
version = "4.1.0"
description = "Policy-driven, intent-gated RAG chat framework — pluggable LLM providers, pgvector, AI-native React UI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["rag", "llm", "fastapi", "pgvector", "intent-classification", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "sentence-transformers>=3.0.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.0",
]

[project.optional-dependencies]
cerebras  = ["cerebras-cloud-sdk>=1.0.0"]
openai    = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
cache     = ["redis>=5.0.0"]
gpu       = ["torch>=2.0.0"]
all       = ["rag-chat[cerebras,openai,anthropic,cache,gpu]"]

[project.scripts]
rag-chat = "backend.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"backend/llm/providers/*.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
